--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,6 @@
 {
-    "em.awp.name": "Example",
-    "em.awp.category": "Example",
-    "em.awp.description": "ClipCC example extension",
-    "em.awp.return": "return [VALUE]",
-    "em.awp.helloworld": "Hello World!"
+    "em.awp.name": "Advanced Word Printing",
+    "em.awp.description": "A ClipCC word printing extension with multi option and support Google Font",
+    "em.awp.category": "你好",
+    "em.awp.hello": "说你好"
 }
