--- a/locales/zh-tw.json
+++ b/locales/zh-tw.json
@@ -9,8 +9,8 @@
     "em.awp.strokeStyle": "文字外框顏色設為 [COLOR]",
     "em.awp.setSize": "字體大小設為 [SIZE] 像素",
     "em.awp.setStyle": "字體風格設為 [STYLE]",
-    "em.awp.fill": "插入填滿文字 [TEXT] 於 X: [X] Y: [Y]",
-    "em.awp.stroke": "插入空心文字 [TEXT] 於 X: [X] Y: [Y]",
+    "em.awp.fill": "列印填滿文字 [TEXT] 於 X: [X] Y: [Y]",
+    "em.awp.stroke": "列印空心文字 [TEXT] 於 X: [X] Y: [Y]",
     "em.awp.getText": "文字 [TEXT] 的 ［TYPE］",
     "em.awp.get": "目前的 [TEXT]",
     "em.awp.size": "字體大小",
